// Good example proto following AIP standards
// This should pass semantic review with no issues

syntax = "proto3";

package example.library.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

option java_package = "com.example.library.v1";
option java_multiple_files = true;

// A book resource in the library.
message Book {
  option (google.api.resource) = {
    type: "library.googleapis.com/Book"
    pattern: "publishers/{publisher}/books/{book}"
  };

  // The resource name of the book.
  // Format: publishers/{publisher}/books/{book}
  string name = 1 [(google.api.field_behavior) = IDENTIFIER];

  // The display name of the book.
  string display_name = 2 [(google.api.field_behavior) = REQUIRED];

  // The ISBN of the book.
  string isbn = 3 [(google.api.field_behavior) = IMMUTABLE];

  // The authors of the book.
  repeated string authors = 4;

  // A brief description of the book.
  string description = 5;

  // The number of pages in the book.
  int32 page_count = 6;

  // The publication state of the book.
  State state = 7 [(google.api.field_behavior) = OUTPUT_ONLY];

  // When the book was created.
  google.protobuf.Timestamp create_time = 8 [(google.api.field_behavior) = OUTPUT_ONLY];

  // When the book was last updated.
  google.protobuf.Timestamp update_time = 9 [(google.api.field_behavior) = OUTPUT_ONLY];

  // A system-generated unique identifier.
  string uid = 10 [(google.api.field_behavior) = OUTPUT_ONLY];

  // The publication state of a book.
  enum State {
    // Default value. This value is unused.
    STATE_UNSPECIFIED = 0;
    // The book is in draft state.
    DRAFT = 1;
    // The book is published.
    PUBLISHED = 2;
    // The book is out of print.
    OUT_OF_PRINT = 3;
  }
}

// Request message for GetBook.
message GetBookRequest {
  // The name of the book to retrieve.
  // Format: publishers/{publisher}/books/{book}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "library.googleapis.com/Book"
    }
  ];
}

// Request message for ListBooks.
message ListBooksRequest {
  // The parent publisher.
  // Format: publishers/{publisher}
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      child_type: "library.googleapis.com/Book"
    }
  ];

  // The maximum number of books to return. Default is 10, max is 100.
  int32 page_size = 2;

  // A page token from a previous ListBooks call.
  string page_token = 3;

  // Filter expression.
  string filter = 4;

  // Order by expression.
  string order_by = 5;
}

// Response message for ListBooks.
message ListBooksResponse {
  // The books matching the request.
  repeated Book books = 1;

  // A token to retrieve the next page of results.
  string next_page_token = 2;

  // The total count of books (may be approximate).
  int32 total_size = 3;
}

// Request message for CreateBook.
message CreateBookRequest {
  // The parent publisher.
  // Format: publishers/{publisher}
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      child_type: "library.googleapis.com/Book"
    }
  ];

  // The book to create.
  Book book = 2 [(google.api.field_behavior) = REQUIRED];

  // The ID to use for the book, which will become the final component
  // of the book's resource name.
  string book_id = 3;
}

// Request message for UpdateBook.
message UpdateBookRequest {
  // The book to update.
  Book book = 1 [(google.api.field_behavior) = REQUIRED];

  // The list of fields to update.
  google.protobuf.FieldMask update_mask = 2;

  // If true, validate the request but do not persist it.
  bool validate_only = 3;
}

// Request message for DeleteBook.
message DeleteBookRequest {
  // The name of the book to delete.
  // Format: publishers/{publisher}/books/{book}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "library.googleapis.com/Book"
    }
  ];

  // Optional. The etag of the book.
  // If provided and does not match the current etag, deletion will fail.
  string etag = 2;
}

// The Library service manages books.
service LibraryService {
  // Gets a book.
  rpc GetBook(GetBookRequest) returns (Book) {
    option (google.api.http) = {
      get: "/v1/{name=publishers/*/books/*}"
    };
  }

  // Lists books.
  rpc ListBooks(ListBooksRequest) returns (ListBooksResponse) {
    option (google.api.http) = {
      get: "/v1/{parent=publishers/*}/books"
    };
  }

  // Creates a book.
  rpc CreateBook(CreateBookRequest) returns (Book) {
    option (google.api.http) = {
      post: "/v1/{parent=publishers/*}/books"
      body: "book"
    };
  }

  // Updates a book.
  rpc UpdateBook(UpdateBookRequest) returns (Book) {
    option (google.api.http) = {
      patch: "/v1/{book.name=publishers/*/books/*}"
      body: "book"
    };
  }

  // Deletes a book.
  rpc DeleteBook(DeleteBookRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/{name=publishers/*/books/*}"
    };
  }
}
